# NN-C

./: .gitignore  CMakeLists.txt  README.md  main.c
.cache/clangd/index/: double.c.83BB86CEABAF3789.idx  double.h.B90B29E7EFB97A5C.idx  gates.c.DFDAF04EEF323A51.idx  gates.h.F54151B847C1355F.idx  main.c.8BDC1E0044802BF8.idx  matrix.c.B14DF8E0A795F349.idx  matrix.h.E67973E75CA3F1DF.idx  network.c.B676BAA4E14E1D2D.idx  utils.c.B0AE62815C4DAEEE.idx  utils.h.0B56EF92074DEE41.idx  xor.c.A1447B74887CF0DB.idx  xor.h.2103F817B9BBD520.idx
include/: double.h  gates.h  matrix.h  network.h  utils.h  xor.h
src/: double.c  gates.c  matrix.c  network.c  utils.c  xor.c
